@@ -1,3 +1,11 @@
+2011-01-27  Murray Cumming  <murrayc@murrayc-desktop>
+
+	reviewed by: <delete if not using a buddy>
+
+	* gtk/gtkmm.pc.in:
+	* gtk/gtkmm/comboboxtext.cc:
+	* gtk/gtkmm/comboboxtext.h:
+
 2011-01-18  Murray Cumming  <murrayc@murrayc.com>
 
 	Range: Added get/set_round_digits() and property.
